user and post model are all  efficient

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -56,6 +56,8 @@
 
  .butn{
     background: #516381;
+    color: white;
+    font-size: 15px;
  }
  .postbutton{
    position: absolute;
@@ -74,7 +76,7 @@
    position: fixed;
    bottom: 0;
    width: 100%;
-   top:8rem;
+   top:9.6rem;
    background-color:rgba(68, 181, 226, 0.12);
    opacity: 40%;
 }
