--- a/app/assets/stylesheets/reg.scss
+++ b/app/assets/stylesheets/reg.scss
@@ -97,3 +97,13 @@
     background: #FFFFFF;
     border-radius: 103px;
 }
+
+#edit{
+    position: relative;
+    left: 500px;
+    font-family: 'Rock Salt', cursive;
+    background-color: white;
+    color:  #516381;
+    top: 25px;
+    font-size: 15px;
+}
