--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,9 +14,10 @@
                <li><%= link_to "log out",  destroy_user_session_path, method: :delete, class: "lu" %></li>
             </ul>
         <% end %>
-     <%= link_to "upload-photo", edit_user_registration_path, class: "butn" %>
+     
 
       <div id = "img">
+      <%= link_to "upload-photo", edit_user_registration_path, class: "butn" %>
       <%= image_tag user_avatar(current_user, 200), class: "rounded-circle"%>
       </div> 
     
@@ -25,7 +26,7 @@
                   <%= link_to "photos", images_path %>
                   <%= link_to "friens", "#"%>
                   <%= link_to "posts", new_post_path %>
-                  <%= link_to "post-feed", "#"%>
+                  <%= link_to "post-feed", posts_path %>
                   <%= link_to "settings", edit_user_registration_path%>
                   <%= link_to "notifications", "#" %>
                 
@@ -33,18 +34,7 @@
 
      </div>
 
-<div id = "flow">
-    <div class="container" >
-      <div class="row">
-        
-        <div class="col-sm-1">
-          <%= form_for @post do |p| %>
-          <%= p.text_field :description , class: "text" %>
-          <%= p.submit "publish post", class: "postbutton"%>
-          <% end %>
-        </div>
-      </div>
-    </div>
+       <%= render 'shared/post' %>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
