--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,6 +17,7 @@
 
 
       <div id = "img">
+      <%= link_to "upload-photo", edit_user_registration_path, class: "butn" %>
       <%= image_tag user_avatar(current_user, 200), class: "rounded-circle"%>
       </div>
            
