--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,2 +1,4 @@
-<%= comment.body %><br>
- <p>(<%= time_ago_in_words(comment.created_at || Time.now) %> ago.)</p>
+<div id = "comcol">
+    <%= comment.body %><br>
+    <p>(<%= time_ago_in_words(comment.created_at || Time.now) %> ago.)</p>
+ </div>
