--- a/app/assets/stylesheets/reg.scss
+++ b/app/assets/stylesheets/reg.scss
@@ -23,7 +23,7 @@
 
 #field{
     position: absolute;
-    font-family: Rock Salt;
+    font-family: 'Rock Salt', cursive;
     font-style: normal;
     font-weight: normal;
     left: 400px;
@@ -39,7 +39,7 @@
     height: 65px;
     left: 600px;
     top: 550px;
-    font-family: Rock Salt;
+    font-family: 'Rock Salt', cursive;
     font-style: normal;
     font-weight: normal;
     font-size: 48px;
@@ -53,7 +53,7 @@
     height: 65px;
     left: 550px;
     top: 85px;
-    font-family: Rock Salt;
+    font-family: 'Rock Salt', cursive;
     font-style: normal;
     font-weight: normal;
     font-size: 48px;
@@ -68,7 +68,7 @@
     height: 40px;
     left: 800px;
     top: 66px;
-    font-family: Rock Salt;
+    font-family: 'Rock Salt', cursive;
     font-style: normal;
     font-weight: normal;
     font-size: 48px;
