friendship routes and views

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,9 +23,9 @@
            
           <div class = "navbar">
                   <%= link_to "photos", images_path %>
-                  <%= link_to "friens", "#"%>
+                  <%= link_to "friends", users_path %>
                   <%= link_to "posts", new_post_path %>
-                  <%= link_to "post-feed", "#"%>
+                  <%= link_to "post-feed", posts_path %>
                   <%= link_to "settings", edit_user_registration_path%>
                   <%= link_to "notifications", "#" %>
                 
