--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,24 +10,12 @@
   <div id = "pymk">    
         <span class = "word"> People you may know </span>
   </div><br>
-
-    <% User.all.each do |us| %>
-        <div id = "friend">
-            <%= image_tag gravatar_image_url(us.username),  class: "pix"%>
-            <div id = "namz">:<%= us.username %></div>
-
-           <div class = "butz">             
-                <% if current_user.friend?(us)%>
-                <%= link_to "Remove friend", "#"%>
-                <% else %>
-                    <%= form_for current_user.friendships.build(friend: us) do |f| %>
-                        <%= link_to "Add friend" %>
-                    </span>
-                    <% end %>
-                <% end %>
-            </div>
-        </div><br>
+<%= link_to 'Back', new_post_path, class: "but"%>
+    <% if @users.any? %>
+       <%= render @users %>
     <% end %>
+        
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
